fix overflow right

--- a/css/index.css
+++ b/css/index.css
@@ -24,7 +24,7 @@ body {
   }
 
   #myNavbar .navbar-toggler{
-    background-color: white;
+    background-color: #dfdfef;
   }
 
   #myNavbar .navbar-brand{
